--- a/SemaAndCo/App.config
+++ b/SemaAndCo/App.config
@@ -44,6 +44,12 @@
       <setting name="archivePassword" serializeAs="String">
         <value>12345</value>
       </setting>
+      <setting name="adminPassword" serializeAs="String">
+        <value>Mamo4ka228</value>
+      </setting>
+      <setting name="adminLogin" serializeAs="String">
+        <value>admin</value>
+      </setting>
     </SemaAndCo.Properties.Settings>
   </userSettings>
   <runtime>
