--- a/SemaAndCo/Properties/Settings.settings
+++ b/SemaAndCo/Properties/Settings.settings
@@ -20,5 +20,11 @@
     <Setting Name="archivePassword" Type="System.String" Scope="User">
       <Value Profile="(Default)">12345</Value>
     </Setting>
+    <Setting Name="adminPassword" Type="System.String" Scope="User">
+      <Value Profile="(Default)">Mamo4ka228</Value>
+    </Setting>
+    <Setting Name="adminLogin" Type="System.String" Scope="User">
+      <Value Profile="(Default)">admin</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
