--- a/SemaAndCo/App.config
+++ b/SemaAndCo/App.config
@@ -47,8 +47,8 @@
       <setting name="adminPassword" serializeAs="String">
         <value>Mamo4ka228</value>
       </setting>
-      <setting name="adminLogin" serializeAs="String">
-        <value>admin</value>
+      <setting name="adminIntro" serializeAs="String">
+        <value>False</value>
       </setting>
     </SemaAndCo.Properties.Settings>
   </userSettings>
