--- a/SemaAndCo/Properties/Settings.settings
+++ b/SemaAndCo/Properties/Settings.settings
@@ -23,8 +23,8 @@
     <Setting Name="adminPassword" Type="System.String" Scope="User">
       <Value Profile="(Default)">Mamo4ka228</Value>
     </Setting>
-    <Setting Name="adminLogin" Type="System.String" Scope="User">
-      <Value Profile="(Default)">admin</Value>
+    <Setting Name="adminIntro" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
     </Setting>
   </Settings>
 </SettingsFile>
