--- a/SemaAndCo/SemaAndCo.csproj
+++ b/SemaAndCo/SemaAndCo.csproj
@@ -271,6 +271,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="Resources\Руководство пользователя.pdf" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
